fixed tab headline spacing

--- a/src/sass/pages/_hire_join_sections.scss
+++ b/src/sass/pages/_hire_join_sections.scss
@@ -5,6 +5,13 @@
     padding-top: 16px;
   }
 
+  .tabs--contact {
+    @include mobile {
+      .tabs--headline > div {
+        margin-right: 32px;
+      }
+    }
+  }
   #confettiAnimation {
     position: absolute;
     left: 0;
